processed/gerrit/txt/58441.txt
Change:     58441
Subject:    LU-18822 build: fix symbol redeclaration error in socklnd_lib.c
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/58441
Change-Id:  I047746e93ef1b4421f0bf7ff0c39848996698331
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      Jian Yu
Created:    2025-03-17 18:35:42.000000000
Updated:    2025-03-26 04:06:37.000000000
Patch Set:  2
Insertions: +5
Deletions:  -5
Comments:   0 (0 unresolved)

--- Labels ---
  Code-Review: Cyril Bordage: +1; Andreas Dilger: +1; Oleg Drokin: +2; Hongchao Zhang: +1
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  CC: Peter Jones, Li Xi
  REVIEWER: Oleg Drokin, Andreas Dilger, Hongchao Zhang, Cyril Bordage

--- Commit Message ---
LU-18822 build: fix symbol redeclaration error in socklnd_lib.c

This patch fixes the following symbol redeclaration errors
in socklnd_lib.c:

  lnet/klnds/socklnd/socklnd_lib.c: In function 'ksocknal_lib_recv_kiov':
  lnet/klnds/socklnd/socklnd_lib.c:314:23: error: 'scratchiov' redeclared as different kind of symbol
    314 |         struct kvec  *scratchiov = &scratch;
        |                       ^~~~~~~~~~
  lnet/klnds/socklnd/socklnd_lib.c:310:37: note: previous definition of 'scratchiov' with type 'struct kvec *'
    310 |                        struct kvec *scratchiov)
        |                        ~~~~~~~~~~~~~^~~~~~~~~~
  lnet/klnds/socklnd/socklnd_lib.c:315:24: error: 'pages' redeclared as different kind of symbol
    315 |         struct page  **pages      = NULL;
        |                        ^~~~~
  lnet/klnds/socklnd/socklnd_lib.c:309:63: note: previous definition of 'pages' with type 'struct page **'
    309 | ksocknal_lib_recv_kiov(struct ksock_conn *conn, struct page **pages,
        |                                                 ~~~~~~~~~~~~~~^~~~~

Fixes: 89df5e712f ("LU-11415 socklnd: improve scheduling algorithm")
Change-Id: I047746e93ef1b4421f0bf7ff0c39848996698331
Signed-off-by: Jian Yu <yujian@whamcloud.com>
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/58441
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Hongchao Zhang <hongchao@whamcloud.com>
Reviewed-by: Cyril Bordage <cbordage@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>

--- Review History ---

--- Message (Jian Yu, 2025-03-17 18:35:42.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2025-03-17 18:37:55.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (jenkins, 2025-03-17 19:17:39.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/111796/ : SUCCESS

--- Message (Autotest, 2025-03-18 07:17:22.000000000) ---
Patch Set 1:

Onyx Autotest retesting enforced review-dne-zfs-part-6 session on el8.10-x86_64/zfs servers and clients for build 111796 patch 1. Requested by jianyu because of LU-18125.

--- Message (Andreas Dilger, 2025-03-19 08:01:59.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Hongchao Zhang, 2025-03-20 02:51:15.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Cyril Bordage, 2025-03-20 08:17:43.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Oleg Drokin, 2025-03-26 04:06:33.000000000) ---
Patch Set 1: Code-Review+2

--- Message (Oleg Drokin, 2025-03-26 04:06:37.000000000) ---
Change has been successfully cherry-picked as 36dced9600a0019260e2becee1e39e797c65d417 by Oleg Drokin
